// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests should show TraineeList with no trainee 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-1 MuiPaper-rounded"
    >
      <table
        class="MuiTable-root makeStyles-table-2"
      >
        <thead
          class="MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Name
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight"
              scope="col"
            >
              Preis
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        />
      </table>
    </div>
  </div>
</body>
`;

exports[`snapshot tests should show TraineeList with one trainee 1`] = `
<body>
  <div />
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-49 MuiPaper-rounded"
    >
      <table
        class="MuiTable-root makeStyles-table-50"
      >
        <thead
          class="MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Name
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight"
              scope="col"
            >
              Preis
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-hover"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body"
              scope="row"
            >
              Tester
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
            >
              1500
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;
